--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "project-config",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "main": "index.js",
   "author": "zhangmin.jammy <zhangmin.jammy@bytedance.com>",
   "license": "MIT",
   "scripts": {
     "prepare": "husky install",
-    "lint": "eslint src --ext .js"
+    "lint": "eslint src --ext .js",
+    "release": "standard-version"
   },
   "devDependencies": {
     "@commitlint/config-conventional": "^16.2.4",
@@ -14,6 +15,7 @@
     "eslint": "^8.14.0",
     "eslint-config-jammy": "^0.0.5",
     "husky": "^7.0.4",
-    "lint-staged": "^12.4.1"
+    "lint-staged": "^12.4.1",
+    "standard-version": "^9.3.2"
   }
 }
