--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "project-config",
-  "version": "1.1.1-alpha.1",
+  "version": "1.1.1",
   "main": "index.js",
   "author": "zhangmin.jammy <zhangmin.jammy@bytedance.com>",
   "license": "MIT",
