--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "eslint-config-jammy": "^0.0.5",
     "husky": "^7.0.4",
     "lint-staged": "^12.4.1",
-    "standard-version": "^9.3.2"
+    "standard-version": "^9.3.2",
+    "stylelint": "^14.8.2",
+    "stylelint-config-recess-order": "^3.0.0",
+    "stylelint-config-standard": "^25.0.0"
   }
 }
