chore: less & scss

--- a/.stylelintrc
+++ b/.stylelintrc
@@ -1,3 +1,13 @@
 {
-  extends: ["stylelint-config-standard", "stylelint-config-recess-order"]
+  "extends": ["stylelint-config-standard", "stylelint-config-recess-order"],
+  "overrides": [
+    {
+      "files": ["**/*.less"],
+      "customSyntax": "postcss-less"
+    },
+    {
+      "files": ["**/*.scss"],
+      "customSyntax": "postcss-scss"
+    }
+  ]
 }
